fixed text bug on smaller screen for matches

--- a/public/css/rektsummoner.css
+++ b/public/css/rektsummoner.css
@@ -516,7 +516,7 @@
 }
 
 .match-img, .match-stats-1, .match-stats-2 {
-    width: 100px;
+    width: 80px;
 }
 
 .match-trinket {
